resolved spacing issues with profiles app detail items, form input padding and spacing

--- a/app/styles/styles-guy.css
+++ b/app/styles/styles-guy.css
@@ -41,114 +41,23 @@ Upon import of blockstack-bootstrap, go through styles and replace with latest s
 */
 
 /* 3. Spacing */
-.m-t-0{margin-top:0px;}
-.m-t-10{margin-top:10px;}
-.m-t-15{margin-top:15px;}
-.m-t-20{margin-top:20px;}
-.m-t-25{margin-top:25px;}
-.m-t-30{margin-top:30px;}
-.m-t-35{margin-top:35px;}
-.m-t-40{margin-top:40px;}
-.m-t-45{margin-top:45px;}
-.m-t-50{margin-top:50px;}
-.m-t-55{margin-top:55px;}
-.m-t-60{margin-top:60px;}
-.m-t-65{margin-top:65px;}
-.m-t-70{margin-top:70px;}
-.m-t-75{margin-top:75px;}
-.m-t-80{margin-top:80px;}
-.m-t-85{margin-top:85px;}
-.m-t-90{margin-top:90px;}
-.m-t-95{margin-top:95px;}
-.m-b-0{margin-bottom:0px;}
-.m-b-10{margin-bottom:10px;}
-.m-b-15{margin-bottom:15px;}
-.m-b-20{margin-bottom:20px;}
-.m-b-25{margin-bottom:25px;}
-.m-b-30{margin-bottom:30px;}
-.m-b-35{margin-bottom:35px;}
-.m-b-40{margin-bottom:40px;}
-.m-b-45{margin-bottom:45px;}
-.m-b-50{margin-bottom:50px;}
-.m-b-55{margin-bottom:55px;}
-.m-b-60{margin-bottom:60px;}
-.m-b-65{margin-bottom:65px;}
-.m-b-70{margin-bottom:70px;}
-.m-b-75{margin-bottom:75px;}
-.m-b-80{margin-bottom:80px;}
-.m-b-85{margin-bottom:85px;}
-.m-b-90{margin-bottom:90px;}
-.m-b-95{margin-bottom:95px;}
-.p-t-0{padding-top:0px;}
-.p-t-10{padding-top:10px;}
-.p-t-15{padding-top:15px;}
-.p-t-20{padding-top:20px;}
-.p-t-25{padding-top:25px;}
-.p-t-30{padding-top:30px;}
-.p-t-35{padding-top:35px;}
-.p-t-40{padding-top:40px;}
-.p-t-45{padding-top:45px;}
-.p-t-50{padding-top:50px;}
-.p-t-55{padding-top:55px;}
-.p-t-60{padding-top:60px;}
-.p-t-65{padding-top:65px;}
-.p-t-70{padding-top:70px;}
-.p-t-75{padding-top:75px;}
-.p-t-80{padding-top:80px;}
-.p-t-85{padding-top:85px;}
-.p-t-90{padding-top:90px;}
-.p-t-95{padding-top:95px;}
-.p-b-0{padding-bottom:0px;}
-.p-b-10{padding-bottom:10px;}
-.p-b-15{padding-bottom:15px;}
-.p-b-20{padding-bottom:20px;}
-.p-b-25{padding-bottom:25px;}
-.p-b-30{padding-bottom:30px;}
-.p-b-35{padding-bottom:35px;}
-.p-b-40{padding-bottom:40px;}
-.p-b-45{padding-bottom:45px;}
-.p-b-50{padding-bottom:50px;}
-.p-b-55{padding-bottom:55px;}
-.p-b-60{padding-bottom:60px;}
-.p-b-65{padding-bottom:65px;}
-.p-b-70{padding-bottom:70px;}
-.p-b-75{padding-bottom:75px;}
-.p-b-80{padding-bottom:80px;}
-.p-b-85{padding-bottom:85px;}
-.p-b-90{padding-bottom:90px;}
-.p-b-95{padding-bottom:95px;}
+/* Custom spacing classes to be removed -- Start */
+.m-t-0{margin-top:0px}.m-t-10{margin-top:10px}.m-t-15{margin-top:15px}.m-t-20{margin-top:20px}.m-t-25{margin-top:25px}.m-t-30{margin-top:30px}.m-t-35{margin-top:35px}.m-t-40{margin-top:40px}.m-t-45{margin-top:45px}.m-t-50{margin-top:50px}.m-t-55{margin-top:55px}.m-t-60{margin-top:60px}.m-t-65{margin-top:65px}.m-t-70{margin-top:70px}.m-t-75{margin-top:75px}.m-t-80{margin-top:80px}.m-t-85{margin-top:85px}.m-t-90{margin-top:90px}.m-t-95{margin-top:95px}.m-b-0{margin-bottom:0px}.m-b-10{margin-bottom:10px}.m-b-15{margin-bottom:15px}.m-b-20{margin-bottom:20px}.m-b-25{margin-bottom:25px}.m-b-30{margin-bottom:30px}.m-b-35{margin-bottom:35px}.m-b-40{margin-bottom:40px}.m-b-45{margin-bottom:45px}.m-b-50{margin-bottom:50px}.m-b-55{margin-bottom:55px}.m-b-60{margin-bottom:60px}.m-b-65{margin-bottom:65px}.m-b-70{margin-bottom:70px}.m-b-75{margin-bottom:75px}.m-b-80{margin-bottom:80px}.m-b-85{margin-bottom:85px}.m-b-90{margin-bottom:90px}.m-b-95{margin-bottom:95px}.p-t-0{padding-top:0px}.p-t-10{padding-top:10px}.p-t-15{padding-top:15px}.p-t-20{padding-top:20px}.p-t-25{padding-top:25px}.p-t-30{padding-top:30px}.p-t-35{padding-top:35px}.p-t-40{padding-top:40px}.p-t-45{padding-top:45px}.p-t-50{padding-top:50px}.p-t-55{padding-top:55px}.p-t-60{padding-top:60px}.p-t-65{padding-top:65px}.p-t-70{padding-top:70px}.p-t-75{padding-top:75px}.p-t-80{padding-top:80px}.p-t-85{padding-top:85px}.p-t-90{padding-top:90px}.p-t-95{padding-top:95px}.p-b-0{padding-bottom:0px}.p-b-10{padding-bottom:10px}.p-b-15{padding-bottom:15px}.p-b-20{padding-bottom:20px}.p-b-25{padding-bottom:25px}.p-b-30{padding-bottom:30px}.p-b-35{padding-bottom:35px}.p-b-40{padding-bottom:40px}.p-b-45{padding-bottom:45px}.p-b-50{padding-bottom:50px}.p-b-55{padding-bottom:55px}.p-b-60{padding-bottom:60px}.p-b-65{padding-bottom:65px}.p-b-70{padding-bottom:70px}.p-b-75{padding-bottom:75px}.p-b-80{padding-bottom:80px}.p-b-85{padding-bottom:85px}.p-b-90{padding-bottom:90px}.p-b-95{padding-bottom:95px}
+/* Custom spacing classes to be removed -- End */
 
 /* 4. Body */
 body,html,#app,.app-landing{height:100%;}
 body{font-family:'Lato',sans-serif;font-size:14px;background-color:rgba(250,250,250,1);}
 .body-profiles{width:100%;height:100%;background:#fafafa;background:-webkit-linear-gradient(top,#fafafa 0%,#f2f2f2 100%);}
-.site-wrapper {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	padding: 35px;
-}
+.site-wrapper{display:flex;flex-direction:column;height:100%;padding:35px;}
 
 /* 13. Forms */
-.form-control {
-	font-size: 0.875rem;
-	font-weight: 400;
-	line-height: 28px;
-	color: #949494;
-	padding: 0.75rem 1.375rem;
-	border: 1px solid #fff;
-	border-radius: 0;
-}
-.form-control::-webkit-input-placeholder{
-	text-transform: capitalize;
-	font-size: 0.875rem;
-}
+.form-control{font-size:0.875rem;font-weight:400;line-height:28px;color:#949494;padding:0.75rem 1.375rem;border:1px solid #fff;border-radius:0;}
+.form-control::-webkit-input-placeholder{text-transform:capitalize;font-size:0.875rem;}
 
 /* 16. Navbar */
 .navbar{padding:0!important;}
-.navbar-brand{
-	padding:0;
-}
+.navbar-brand{padding:0;}
 .navbar-brand img{width:48px;}
-.navbar-text-secondary{color:#949494;}
+.navbar-text-secondary{color:#949494;margin-top:-5px;}
 
